@startuml 结构图
class Client {
    + createProduct(): Product
}

interface Builder {

    + buildPartA() : Builder
    + buildPartB() : Builder
    + buildPartC() : Builder
    + build(): Product
}

class Director {
    - builder
    + construct(): Product
}

class Product {
    - partA
    - partB
    - partC
}

Client --> Builder : 实例化
Client --> Director : 实例化，创建产品

Director o-right-> Builder
Builder <|-down- ConcreteBuilder1
Builder <|-down- ConcreteBuilder2

ConcreteBuilder1 --> Product : 实例化
ConcreteBuilder2 --> Product : 实例化
@enduml
